# newsletter-parser

./: .env.example  .gitignore  CLAUDE.md  README.md  SETUP.md  pyproject.toml
src/newsletter_parser/: __init__.py  config.py  extractor.py  gmail.py  main.py  prompts.py  state.py  synthesizer.py  triage.py
