[project]
name = "newsletter-parser"
version = "0.1.0"
description = "Automated agent that filters, parses, and synthesizes Gmail newsletters into a consolidated briefing."
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "anthropic>=0.40.0",
    "beautifulsoup4>=4.12.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.1.0",
    "tiktoken>=0.7.0",
    "markdown>=3.5.0",
    "lxml>=5.0.0",
]

[project.scripts]
newsletter-parser = "newsletter_parser.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/newsletter_parser"]
